--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -11,3 +11,7 @@ file(GLOB SOURCE_FILES *.cpp)
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 target_link_libraries(${PROJECT_NAME} ${CONAN_LIBS})
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
+
+if(ENABLE_ASIO_LIB)
+  target_compile_options(${PROJECT_NAME} PRIVATE -DWITH_ASIO)
+endif()
